App can view all posts, user's posts and comments.
