# backend/src/controllers/postControllers.js
@@ -1,14 +1,11 @@
-var _ = require('lodash');
-const mongoose = require('mongoose');
-
-const { PostModel, ProjectModel } = require('../models');
+const { PostModel } = require('../models');
 
 const getUserPosts = async (req, res) => {
   const user = req.user;
   if (!user) return res.json({ err: 'You are not authorized!' });
 
   try {
-    const result = await PostModel.findOne({ authorId: req.user._id.toString() });
+    const result = await PostModel.find({ authorId: req.user._id.toString() });
     res.status(200).json(result);
   } catch {
     res.status(404).json({ err: 'Fail to retrieve your posts.' });
@@ -18,22 +15,12 @@ const getUserPosts = async (req, res) => {
 const createPost = async (req, res) => {
   const user = req.user;
   if (!user) return res.json({ err: 'You are not authorized!' });
-
+  if (!req.body.postCaption) {
+    return res.status(400).json({ err: 'Cannot create post without a caption.' });
+  }
   try {
-    const session = await mongoose.startSession();
-    session.startTransaction();
-    let newProject;
-    if (req.body.projectData) {
-      newProject = new ProjectModel({
-        ...req.body.projectData,
-        isProjectFinished: false,
-        peopleOnProject: []
-      });
-      newProject.save();
-    }
     const newPost = new PostModel({
       authorId: req.user._id,
-      projectId: newProject ? newProject._id.toString() : null,
       postDate: new Date(),
       postCaption: req.body.postCaption,
       postLikes: 0,
@@ -41,11 +28,8 @@ const createPost = async (req, res) => {
     });
 
     newPost.save();
-    await session.commitTransaction();
-    const sendBackJson = req.body.projectData
-      ? { post: { ...newPost._doc }, project: { ...newProject._doc } }
-      : { post: { ...newPost._doc } };
-    res.status(201).json(sendBackJson);
+
+    res.status(201).json({ ...newPost._doc });
   } catch {
     res.status(400).json({ err: 'Cannot create post.' });
   }
